# EVConcierge

./: .gitignore  README.md  TODO.md  evconcierge.service  manage.py  migrate_experiences_to_offerings.py  pyproject.toml  questions.md  walkthrough.md
EVConcierge/: asgi.py  settings.py  urls.py  wsgi.py
deeplink/: apps.py  tests.py  urls.py  views.py
deeplink/templates/deeplink/: landing.html
property_manager/: admin.py  apps.py  forms.py  models.py  push_service.py  tests.py  urls.py  views.py
property_manager/api/: serializers.py  urls.py  views.py
property_manager/migrations/: 0001_initial.py  0002_owneroffering.py  0003_booking_num_guests.py  0004_alter_order_status.py  0005_devicetoken.py  0006_rename_property_ma_booking_db2c74_idx_property_ma_booking_293868_idx.py  0007_pushnotification_linked_offerings.py  0008_ownerofferingimage.py
property_manager/static/property_manager/css/: style.css
property_manager/static/property_manager/js/: app.js
property_manager/templates/property_manager/: base.html  dashboard.html
property_manager/templates/property_manager/auth/: login.html
property_manager/templates/property_manager/bookings/: detail.html  form.html  list.html
property_manager/templates/property_manager/categories/: edit.html  manage.html
property_manager/templates/property_manager/chat/: detail.html  list.html
property_manager/templates/property_manager/experiences/: detail.html  list.html
property_manager/templates/property_manager/instructions/: form.html  list.html
property_manager/templatetags/: pm_extras.py
(+12 files in other folders)
