[project]
name = "evconcierge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "firebase-admin>=6.5.0",
    "geopy>=2.4.1",
    "pillow>=12.1.1",
]
